--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         </div>
         <div id="results-carousel" class="carousel results-carousel">
           <div class="item item-steve">
-            <video poster="" id="steve" autoplay controls muted playsinline height="100%">
+            <video poster="" id="steve" autoplay controls muted loop playsinline height="100%">
               <source src="./static/videos/move_slider_left.mp4" type="video/mp4">
             </video>
             <h2 class="subtitle has-text-centered">
@@ -270,7 +270,7 @@
             </h2><br>
           </div>
           <div class="item item-chair-tp">
-            <video poster="" id="chair-tp" autoplay controls muted playsinline height="100%">
+            <video poster="" id="chair-tp" autoplay controls muted loop playsinline height="100%">
               <source src="./static/videos/move_slider_right.mp4" type="video/mp4">
             </video>
             <h2 class="subtitle has-text-centered">
@@ -278,7 +278,7 @@
             </h2><br>
           </div>
           <div class="item item-fullbody">
-            <video poster="" id="fullbody" autoplay controls muted playsinline height="100%">
+            <video poster="" id="fullbody" autoplay controls muted loop playsinline height="100%">
               <source src="./static/videos/calvin_rotate_blue_block_left.mp4" type="video/mp4">
             </video>
             <h2 class="subtitle has-text-centered">
@@ -286,7 +286,7 @@
             </h2><br>
           </div>
           <div class="item item-chair-tp">
-            <video poster="" id="chair-tp" autoplay controls muted playsinline height="100%">
+            <video poster="" id="chair-tp" autoplay controls muted loop playsinline height="100%">
               <source src="./static/videos/open_drawer.mp4" type="video/mp4">
             </video>
             <h2 class="subtitle has-text-centered">
