--- a/index.html
+++ b/index.html
@@ -327,7 +327,13 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>...</code></pre>
+      <pre><code>
+      @article{xuhui2024taksie,
+    title   = {Incorporating Task Progress Knowledge for Subgoal Generation in Robotic Manipulation through Image Edits},
+    author  = {Xuhui Kang, Yen-Ling Kuo},
+    year    = {2024},
+    }
+      </code></pre>
     </div>
   </section>
 
