--- a/index.html
+++ b/index.html
@@ -328,9 +328,9 @@
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>
-      @article{xuhui2024taksie,
+    @article{xuhui2024taksie,
     title   = {Incorporating Task Progress Knowledge for Subgoal Generation in Robotic Manipulation through Image Edits},
-    author  = {Xuhui Kang, Yen-Ling Kuo},
+    author  = {Xuhui Kang and Yen-Ling Kuo},
     year    = {2024},
     }
       </code></pre>
