--- a/index.html
+++ b/index.html
@@ -319,10 +319,14 @@
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>
-    @article{xuhui2024taksie,
-    title   = {Incorporating Task Progress Knowledge for Subgoal Generation in Robotic Manipulation through Image Edits},
-    author  = {Xuhui Kang and Yen-Ling Kuo},
-    year    = {2024},
+    @misc{kang2024incorporatingtaskprogressknowledge,
+      title={Incorporating Task Progress Knowledge for Subgoal Generation in Robotic Manipulation through Image Edits}, 
+      author={Xuhui Kang and Yen-Ling Kuo},
+      year={2024},
+      eprint={2410.11013},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO},
+      url={https://arxiv.org/abs/2410.11013}, 
     }
       </code></pre>
     </div>
